2013-03-17  Julien Bect  <julien.bect@supelec.fr>

	New function stk_param_getdefaultbounds().

	* paramestim/stk_param_estim.m: Remove internal function
	get_default_bounds() and call stk_param_getdefaultbounds()
	instead.
	* paramestim/stk_param_getdefaultbounds.m: New function to be used
	instead of the internal function get_default_bounds() in
	stk_param_estim.m. This function can be overloaded for parameters
	objects.

	In stk_param_estim(), cast param0 to the appropriate type.

	* paramestim/stk_param_estim.m: Cast param0 into an object of the
	appropriate type and size and set model.param to the same value.

	Add local variables delta_p and delta_lnv in stk_remlqrg().

	* paramestim/stk_remlqrg.m: Add local variables for (slightly)
	improved readability and efficiency.

	Modify stk_remlqrg() to support objects in model.param.

	* paramestim/stk_remlqrg.m: Ensure that param is a column vector;
	in the case where model.param is an object, this is actually a
	call to subsasgn() in disguise.

2013-03-16  Julien Bect  <julien.bect@supelec.fr>

	Fix a (recently introduced...) bug in stk_param_init().

	* paramestim/stk_param_init.m: Use log10() when calling
	logspace(). Add a non-regression test.

	Avoid unnecessary gradient computation in stk_param_estim().

	* paramestim/stk_param_estim.m: Compute the gradient only when it
	is explicitely requested, both in f_() and in f_with_noise_().

2013-03-14  Julien Bect  <julien.bect@supelec.fr>

	Add a warning in stk_param_init() when lognoisevariance is defined.

	* paramestim/stk_param_init.m: Issue a warning if there is a
	non-empty lognoisevariance field, since its value won't be used.

	Fix other bugs in stk_param_init().

	* paramestim/stk_param_init.m: Remove the second normalization
	that was performed in the internal function paraminit_(). Use the
	correct box diameter to choose the list of range values for
	isotropic covariance functions.

2013-03-13  Julien Bect  <julien.bect@supelec.fr>
